[package]
name = "process-memory-reader"
version = "0.1.0"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "API to read process memory using WinAPI"
homepage = "https://github.com/vagola/process-memory-reader"
repository = "https://github.com/vagola/process-memory-reader"
keywords = ["memory", "winapi", "process"]
readme = "README.md"
license = "MIT"

[dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "tlhelp32", "memoryapi", "handleapi"] }